--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -4,13 +4,18 @@ block extra_css %}
   rel="stylesheet"
   href="{{ url_for('static', filename='css/components/cards.css') }}"
 />
-<link rel="stylesheet" href="{{ url_for('static', filename='css/components/feed.css') }}" />
+<link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/components/feed.css') }}"
+/>
 {% endblock %} {% block content %}
 <!-- Page Header -->
 <div class="flex justify-between items-center mb-8">
   <div>
     <h1 class="text-3xl font-semibold text-dark">Field A-12 Dashboard</h1>
-    <p class="text-medium mt-1">Last updated: Today at 10:35 AM</p>
+    <p class="text-medium mt-1">
+      Last User Login: <span id="updatingTime"> </span>
+    </p>
   </div>
   <div class="flex items-center">
     <button
