--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -108,6 +108,7 @@ block extra_css %}
     <select
       id="timeRangeSelector"
       class="border border-primary rounded-lg text-sm px-3 py-2 bg-white"
+      title=""
     >
       <option value="7">Last 7 days</option>
       <option value="30" selected>Last 30 days</option>
